--- a/edumate/pubspec.yaml
+++ b/edumate/pubspec.yaml
@@ -30,11 +30,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  sqflite:
+  path:  
+  path_provider:
+  
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  
 
 dev_dependencies:
   flutter_test:
