--- a/edumate/pubspec.yaml
+++ b/edumate/pubspec.yaml
@@ -31,12 +31,15 @@ dependencies:
   flutter:
     sdk: flutter
   sqflite:
-  path:  
-  path_provider:
+  path:
+  path_provider: ^2.0.15
   font_awesome_flutter: ^10.4.0
-  cloud_firestore: ^4.8.1
-  firebase_auth: ^4.6.3
-
+  cloud_firestore: ^4.7.1
+  firebase_auth: ^4.6.1
+  firebase_core: ^2.13.0
+  http: ^0.13.6 
+  open_filex: ^4.3.2
+  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
